# ace_tao

./: .gitignore  CMakeLists.txt  README.md  Stock_i.h  client.cpp  ns.ior  run.sh  server.cpp
client/: CMakeLists.txt  client.cpp
idl/: CMakeLists.txt
server/: CMakeLists.txt  Stock_i.h
